--- a/index.html
+++ b/index.html
@@ -73,26 +73,10 @@ Accessed at: 2 Setember 2024
           </a>
         </div>
         <div class="image-content">
-          <img src="images/about.png" alt="Lady Graduating" />
+          <img src="images/home.jpg" alt="people" />
         </div>
       </div>
       </div>
-   <!--testimonials-->
-   <section class="testimonials">
-    <h1>Our team</h1>
-  <div class="row">
-<div class="testimonials-col">
-<img src="_images/user1.jpg" alt="">
-</div>
-<div class="testimonials-col">
-<img src="_images/user2.jpg" alt="">
-</div>
-
-</div>
-  
-</section>
-
-
       <footer>
         <p>Copyright 2024</p>
         <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
